tests/machine/x/cpp/avg_builtin.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	(cout << avg(vector<int>{1, 2, 3}));
	return 0;
}
